--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>GUNZ.IO</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
+	margin: 0;
+	padding: 0;
+	position: absolute;
     }
 
     #gameContainer canvas {
@@ -234,6 +235,7 @@
   <div id="webgl-content" style="width: 890px; height: 500px">
     <div id="gameContainer" style="width: 890px; height: 500px"></div>
   </div>
+  <div class="links"><a href="http://io-games.io/">More io games</a></div>
   <div id="gunzImage">
   <div id="loadingBox">
     <div id="spinner"></div>
