--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
   </script>
 </head>
 <body>
-  <div id="webgl-content" style="width: 890px; height: 500px">
+  <div id="webgl-content" style="width: 890px; height: 500px; position: absolute;">
     <div id="gameContainer" style="width: 890px; height: 500px"></div>
   </div>
   <div class="links"><a href="http://io-games.io/">More io games</a></div>
