--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 </head>
 <body bgcolor="#000000">
-<div style=";position:absolute;"><a href="http://io-games.io/">More io games</a></div>
+<div style="position:absolute;"><a href="http://io-games.io/">More io games</a></div>
 <div data-height="500" class="game_frame" style="height: 500px;width: 890px;" data-width="890"><iframe msallowfullscreen="false" width="100%" mozallowfullscreen="false" id="game_drop" frameborder="0" src="https://v6p9d9t4.ssl.hwcdn.net/html/583445/index.html" scrolling="no" allowtransparency="true" allowfullscreen="false" height="100%" webkitallowfullscreen="false"></iframe></div>
 </body>
 </html>
