--- a/index3.html
+++ b/index3.html
@@ -14,6 +14,6 @@
   
 </head>
 <body bgcolor="#000000">
-<div data-height="500" class="game_frame" style="height: 500px;width: 890px;" data-width="890"><iframe msallowfullscreen="true" width="100%" mozallowfullscreen="true" id="game_drop" frameborder="0" src="http://gunz.mobi" scrolling="no" allowtransparency="true" allowfullscreen="true" height="100%" webkitallowfullscreen="true"></iframe></div>
+<div data-height="500" class="game_frame" style="height: 500px;width: 890px;" data-width="890"><a href="http://www.kongregate.com/games/squirrelsquare/gunz-io-multiplayer-rts-arena" style="color:#FC0; display:block; margin-top:150px; font-size:40px; text-align:center; font-family:Arial, Helvetica, sans-serif;">Game updated<br> Please try new version.</a></div>
 </body>
 </html>
